--- a/albums/albums.html
+++ b/albums/albums.html
@@ -168,21 +168,20 @@
 
                         </div>
 
-                        <div class="album-content row px-4">
-                            <div class="album-img col-12 col-md-2">
-                                <img  src="../assets/cards/52.jpg" alt="" srcset="">
-                            </div>
-                            <div class="album-content-text col-12 col-md-8 mx-3">
-                                <p class="album-badge">ALBUM</p>
-                                <h3 class="album-title">Bohemian Rhapsody (The Original Soundtrack)</h3>
-                                <div class="album-mini-info">
-                                    
-                                        <p class="d-inline-block">
-                                            
-                                            <span class="profile-name"><i class="bi bi-person-circle"></i> Queen</span> • 2018 • songs, 1hr 19min
-                                         </p>
+                        <div class="album-content row pl-4 mx-0">
+
+                            <div class="d-flex">
+
+                                <img class="d-none d-sm-block" src="../assets/cards/52.jpg" alt="">
+                                <div class="d-flex flex-column album-content-text ml-4">
+                                    <p class="album-badge d-none d-sm-block">ALBUM</p>
+                                    <h3 class="album-title">Bohemian Rhapsody (The Original Soundtrack)</h3>
+
+                                    <span class="profile-name"><i class="bi bi-person-circle"></i> Queen • 2018 • songs, 1hr 19min</span>
                                 </div>
+
                             </div>
+
                         </div>
                     </div>
                     <!--/ Album header -->
