--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col-2 d-none d-xl-block">
                     <div class="row">
                         <div class="side-bar col-12 px-0">
-                            <a href="index.html"><img class="spotify-logo mt-0" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
                             <a href="index.html" class="d-flex selected py-2">
                                 <i class="bi bi-house-door mx-3"></i>
@@ -85,7 +85,7 @@
                 <div class="col-2 d-none d-lg-block d-xl-none">
                     <div class="row">
                         <div class="side-bar col-12 text-light px-0">
-                            <a href="index.html"><img class="spotify-logo" src="../assets/spotlogo.jpg" alt="sidebar-logo"></a>
+                            <a href="index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
                             <a href="index.html" class="d-flex flex-column selected py-2 align-items-center justify-content-center">
                                 <i class="bi bi-house-door"></i>
