--- a/genres/genres.html
+++ b/genres/genres.html
@@ -156,7 +156,7 @@
                             <div class="d-flex col-12 py-3">
 
 
-                                <div class="d-flex flex-wrap mt-5 displaynone" id="rockStyle">
+                                <div class="d-flex flex-wrap mt-5 styleSection displaynone" id="rockStyle">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
@@ -287,8 +287,7 @@
                             </div>
                             <!-- END ROCK SECTION -->
                             <h3 class="styleTitle">UNDERGROUND</h3>
-                            <div class="d-flex col-12 bg-success py-3 displaynone" id="undergroundStyle">
-
+                            <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="undergroundStyle">
 
                                 <div class="d-flex flex-wrap mt-5">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
