--- a/genres/genres.html
+++ b/genres/genres.html
@@ -152,15 +152,15 @@
                         <div class="row mt-5 mx-4">
                             <!-- FRANCESCO CODE GOES HERE -->
 
-                            <h3 class="styleTitle ">ROCK</h3>
-                            <div class="d-flex col-12 py-3">
 
+                            <div class="d-flex col-12 py-3 styleSection displaynone" id="rockStyle">
+                                <h3 class="styleTitle">ROCK</h3>
 
-                                <div class="d-flex flex-wrap mt-5 styleSection displaynone" id="rockStyle">
+                                <div class="d-flex flex-wrap mt-5 ">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
-                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                                <img src="/assets/cards/10.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Rock</h5>
@@ -170,10 +170,10 @@
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
-                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                                <img src="/assets/cards/12.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Doors</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -286,16 +286,16 @@
 
                             </div>
                             <!-- END ROCK SECTION -->
-                            <h3 class="styleTitle">UNDERGROUND</h3>
-                            <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="undergroundStyle">
 
+                            <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="undergroundStyle">
+                                <h3 class="styleTitle">UNDERGROUND</h3>
                                 <div class="d-flex flex-wrap mt-5">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
-                                            <div class="ml-3 mt-4">
+                                            <div class=" mt-4">
                                                 <h5 class="hp-card-title">UNDERGROUND</h5>
                                             </div>
                                         </div>
@@ -419,9 +419,9 @@
 
                             </div>
                             <!-- END UNDERGROUND SECTION -->
-                            <h3 class="styleTitle">R&B</h3>
-                            <div class="d-flex col-12 bg-success py-3 displaynone" id="r&bStyle">
 
+                            <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="rebStyle">
+                                <h3 class="styleTitle">R&B</h3>
 
                                 <div class="d-flex flex-wrap mt-5">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
@@ -553,11 +553,11 @@
 
                             </div>
                             <!-- END R&B SECTION -->
-                            <h3 class="styleTitle">JAZZ</h3>
-                            <div class="d-flex col-12 bg-success py-3">
 
+                            <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="jazzStyle">
+                                <h3 class="styleTitle">JAZZ</h3>
 
-                                <div class="d-flex flex-wrap mt-5 displaynone" id="jazzStyle">
+                                <div class="d-flex flex-wrap mt-5 ">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
@@ -687,7 +687,145 @@
 
                             </div>
                             <!-- END JAZZ SECTION -->
+                            <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="modernStyle">
+                                <h3 class="styleTitle">MODERN ROCK</h3>
 
+                                <div class="d-flex flex-wrap mt-5 ">
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Jazz</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <div class="d-flex">
+                                            <div class="hp-card-img">
+                                                <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
+                                            </div>
+                                            <div class="ml-3 mt-4">
+                                                <h5 class="hp-card-title">Card title</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+                                </div>
+
+
+
+                            </div>
+
+                            <!-- ==============   end modern style -->
+
+
+
+
+                            <!-- =================   end test size -->
                         </div>
 
 
