--- a/genres/genres.html
+++ b/genres/genres.html
@@ -163,7 +163,8 @@
                                                 <img src="/assets/cards/10.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Rock</h5>
+                                                <h5 class="hp-card-title">Deep Purple</h5>
+                                                <p>Made in Japan</p>
                                             </div>
                                         </div>
                                     </div>
@@ -174,6 +175,7 @@
                                             </div>
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Doors</h5>
+                                                <p>The Doors</p>
                                             </div>
                                         </div>
                                     </div>
@@ -183,7 +185,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Led Zeppelin</h5>
+                                                <p>Led Zeppelin IV</p>
                                             </div>
                                         </div>
                                     </div>
@@ -193,7 +196,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">The Who</h5>
+                                                <p>Who's Next</p>
                                             </div>
                                         </div>
                                     </div>
@@ -203,7 +207,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Rolling Stones</h5>
+                                                <p>Flowers</p>
                                             </div>
                                         </div>
                                     </div>
@@ -213,7 +218,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Pink Floyd</h5>
+                                                <p>Atom Heart Mother</p>
                                             </div>
                                         </div>
                                     </div>
@@ -223,7 +229,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">The Clash</h5>
+                                                <p>The Clash</p>
                                             </div>
                                         </div>
                                     </div>
@@ -233,7 +240,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">The Police</h5>
+                                                <p>Reggatta de Blanc</p>
                                             </div>
                                         </div>
                                     </div>
@@ -243,7 +251,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">David Bowie</h5>
+                                                <p>Space Oddity</p>
                                             </div>
                                         </div>
                                     </div>
@@ -253,7 +262,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Janis Joplin</h5>
+                                                <p>Live in Honolulu</p>
                                             </div>
                                         </div>
                                     </div>
@@ -263,7 +273,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">MFSB</h5>
+                                                <p>Love is the message</p>
                                             </div>
                                         </div>
                                     </div>
@@ -273,7 +284,8 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Card title</h5>
+                                                <h5 class="hp-card-title">Jimi Hendrix</h5>
+                                                <p>Are you experienced</p>
                                             </div>
                                         </div>
                                     </div>
