--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                                     <img src="/assets/cards/48.jpg" class="card-img-top pt-2 img-fluid" alt="...">
                                     <div class="card-body">
-                                        <div>
+                                        <div class="buttoncard">
                                             
                                         </div>                                        
                                         <p class="hp-subhero-title">Purple Rain</p>
