--- a/favourites/favourites.html
+++ b/favourites/favourites.html
@@ -162,7 +162,7 @@
 
                                 <div class="row container px-4" id="favourite-header-row">
                                     <div class="song-img col-12 col-md-4">
-                                        <img src="/assets/cards/10.jpg" class="img-fluid" alt="" srcset="">
+                                        <img src="../assets/cards/10.jpg" class="img-fluid" alt="" srcset="">
                                     </div>
 
                                     <div class="header-text-content col-12 col-md-8">
