--- a/artists/artists.html
+++ b/artists/artists.html
@@ -27,6 +27,11 @@
                         <div class="side-bar col-12 px-0">
                             <a href="index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                             
+                            <a href="../profile/profile.html" class="d-flex py-2">
+                                <i class="bi bi-person-circle mx-3"></i>
+                                <p>Account</p>
+                            </a> 
+                            
                             <a href="../index.html" class="d-flex py-2">
                                 <i class="bi bi-house-door mx-3"></i>
                                 <p>Home</p>
