--- a/index.html
+++ b/index.html
@@ -298,7 +298,12 @@
             <div class="col-2 d-lg-none">
                 <i class="bi bi-play-circle-fill"></i>
             </div>
-
+            <!-- <div class="col-3 d-lg-none nav-bar">
+                <a href="./profile/profile.html" class="d-flex selected flex-column justify-content-center align-items-center py-2">
+                    <i class="bi bi-person-circle mx-3"></i>
+                    <p class="d-none d-sm-block mb-0">Account</p>
+                </a> 
+            </div> -->
             <div class="col-3 d-lg-none nav-bar">
                 <a href="index.html" class="d-flex selected flex-column justify-content-center align-items-center py-2">
                     <i class="bi bi-house-door mx-3"></i>
