--- a/genres/genres.html
+++ b/genres/genres.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="genres.css">
-    <link rel = "icon" type = "image/png" href = "/assets/iconspoti.png">
+    <link rel="icon" type="image/png" href="/assets/iconspoti.png">
 
 
 </head>
@@ -131,12 +131,12 @@
                     <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
                     <div class="col-10">
 
-                        <div class="row ml-4">
+                        <div class="row ml-4 ">
                             <!-- FRANCESCO CODE GOES HERE -->
                             <div class="col-12 mt-5 border-bottom border-secondary">
                                 <h3>Genres page</h3>
                             </div>
-                            <div class="col-12 text-center showList">
+                            <div class="col-12 text-center showList bg-songLibrary">
                                 <button type="button" id="rock" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
                                 <button type="button" id="underground" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Underground</button>
                                 <button type="button" id="r&b" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
@@ -305,13 +305,7 @@
                                             </div>
                                         </div>
                                     </div>
-
-
-
                                 </div>
-
-
-
                             </div>
                             <!-- END ROCK SECTION -->
 
@@ -438,19 +432,12 @@
                                             </div>
                                         </div>
                                     </div>
-
-
-
                                 </div>
-
-
-
                             </div>
                             <!-- END UNDERGROUND SECTION -->
 
                             <div class="d-flex col-12 bg-success py-3 displaynone styleSection" id="rebStyle">
                                 <h3 class="styleTitle">R&B</h3>
-
                                 <div class="d-flex flex-wrap mt-5">
                                     <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                         <div class="d-flex">
