--- a/profile/profile.html
+++ b/profile/profile.html
@@ -239,7 +239,7 @@
                                         <p class="my-1">Unlimited Songs</p>
                                         <p class="my-1 mb-3">Solo Use</p>
                                     </div>
-                                    <a href="#" class="btn btn-outline-primary">Purchase</a>
+                                    <button href="#" class="btn btn-outline-primary" data-toggle="modal" data-target="#standard-payment">Purchase</button>
                                 </div>
                             </div>
                         </div>
@@ -255,54 +255,52 @@
                                         <p class="my-1">Unlimited Songs</p>
                                         <p class="my-1 mb-3">6x Family Members</p>
                                     </div>
-                                    <a href="#" class="btn btn-outline-primary">Purchase</a>
+                                    <button href="#" class="btn btn-outline-primary" data-toggle="modal" data-target="#family-payment">Purchase</button>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- <div class="collapse my-3 payment-cards" id="collapseExample">
-
-                            <h2 class="text-center">ghggu</h2>
-                            
-                            <div class="row mt-5">
-
-                                <div class="col-md-4 mb-3 mb-md-0">
-                                    <div class="card">
-                                        <h2 class="card-header m-0 py-2">Free</h2>
-                                        <div class="card-body d-flex flex-column">
-                                            <p class="mb-2">Annual Plan</p>
-                                            <h2 class="card-title mt-0 pt-0">£30</h2>
-                                            <p class="card-text">Per Month <br> <br> Benefit 1 <br> Benefit 2 <br> Benefit 3</p>
-                                            <a href="#" class="btn btn-outline-primary">See More</a>
-                                        </div>
-                                    </div>
+                        
+                        <!-- Modal -->
+                        <div class="modal fade" id="standard-payment" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content bg-dark">
+                                <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Standard Plan - £119.88</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span class="text-danger" aria-hidden="true">&times;</span>
+                                </button>
                                 </div>
-                                <div class="col-md-4 mb-3 mb-md-0">
-                                    <div class="card">
-                                        <h2 class="card-header m-0 py-2">Standard</h2>
-                                        <div class="card-body d-flex flex-column">
-                                            <p class="mb-2">Annual Plan</p>
-                                            <h2 class="card-title mt-0 pt-0">£35</h2>
-                                            <p class="card-text">Per Month <br> <br> Benefit 1 <br> Benefit 2 <br> Benefit 3</p>
-                                            <a href="#" class="btn btn-primary">See More</a>
-                                        </div>
-                                    </div>
+                                <div class="modal-body">
+                                Card Details
                                 </div>
-                                <div class="col-md-4 mb-3 mb-md-0">
-                                    <div class="card">
-                                        <h2 class="card-header m-0 py-2">Family</h2>
-                                        <div class="card-body d-flex flex-column">
-                                            <p class="mb-2">Annual Plan</p>
-                                            <h2 class="card-title mt-0 pt-0">£40</h2>
-                                            <p class="card-text">Per Month <br> <br> Benefit 1 <br> Benefit 2 <br> Benefit 3</p>
-                                            <a href="#" class="btn btn-outline-primary">See More</a>
-                                        </div>
-                                    </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-success">Confirm Purchase</button>
                                 </div>
-
                             </div>
+                            </div>
+                        </div>
 
-                        </div> -->
+
+                        <div class="modal fade" id="family-payment" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content bg-dark">
+                                <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Family Play - £359.88</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span class="text-danger" aria-hidden="true">&times;</span>
+                                </button>
+                                </div>
+                                <div class="modal-body">
+                                Card Details
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-success">Confirm Purchase</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
 
                         </div>
 
