--- a/login/login.html
+++ b/login/login.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="col-12">
-                    <button class="btn-signup">SIGN UP FOR SPOTIFY</button>
+                    <button class="btn-signup w-100">SIGN UP FOR SPOTIFY</button>
                 </div>
             </div>
         </div>
